--- a/aluno/relatorio_banca/disponivel/style.css
+++ b/aluno/relatorio_banca/disponivel/style.css
@@ -2,10 +2,12 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin-top: 2%;
+    margin-bottom: 2%;
+  
 }
 
-.tipo_plano ul li {
+.tipo_plano ul li {    
+    text-align: center;
     list-style: none;
     width: 200px;
     height: 50px;
@@ -18,6 +20,8 @@
     text-decoration: none;
 }
 
+
+
 .form{
     display: flex;
     width: 100%;
@@ -25,10 +29,34 @@
     border: 1px solid #044177;
     border-radius: 30px;
     border-radius: 30px 30px 30px 30px;
+    align-items: center;
+    justify-content: center center;   
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+   
+}
+
+.coninerCentralizado{
+    width: 120%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
+}
+
+.container{ position: relative ;
+    width: 100vw;
+    height: 100vh; 
+ 
 }
 
 .criterioText{
     width: 40%;
+    
 }
 
 .ruim{
@@ -39,18 +67,29 @@
     width: 20%;
 }
 
+.formCampos{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
 .otimo{
     width: 20%;
 }
 
 .criterios h1{
-    font-size: 15px;
+    font-size: 25px;
     color: white;
+    font-family: "Poppins", sans-serif;
     font-weight: 700;
 }
 
 p{
-    font-size: 15px;
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    color: #393939;
 }
 
 .criterios{
@@ -92,7 +131,6 @@ p{
     width: 40%;
     justify-content: space-between;
     padding: 1%;
-    
 }
 
 .clareza label{
@@ -427,7 +465,7 @@ p{
 }
 
 .obsExtras input{
-    width: 90%;
+    width: 60%;
     margin-right: 5%;
     border-radius: 0%;
     display: flex;
@@ -509,8 +547,8 @@ background-color: var(--form-background);
 margin: 0;
 font: inherit;
 color: currentColor;
-width: 1.15em;
-height: 1.15em;
+width: 1.8em;
+height: 1.8em;
 border: 0.15em solid currentColor;
 border-radius: 50%;
 transform: translateY(-0.075em);
