arrumando tela de grupo, modais de turma, perfil e usuários do professor

--- a/professor/cursos/turmas/grupo/grupo.css
+++ b/professor/cursos/turmas/grupo/grupo.css
@@ -322,6 +322,10 @@ main .tema input {
     border-radius: 4px 0 0 4px;
 }
 
+.iconify {
+    border-radius: 100px;
+}
+
 .tipo-select {
     background-color: #e3e3e3;
     border-radius: 10px;
