--- a/professor/usuarios/usuarios.css
+++ b/professor/usuarios/usuarios.css
@@ -334,9 +334,12 @@ ul {
 }
 
 .container-geral img {
-    width: 100%;
     margin-bottom: 1%;
     margin-top: 2%;
+}
+
+.container-geral .iconify {
+    border-radius: 50%;
 }
 
 .container-geral h1 {
@@ -347,7 +350,6 @@ ul {
 
 .container-geral h2 {
     font-size: 30px;
-    color: #05204a;
 }
 
 .container-geral p {
@@ -366,6 +368,7 @@ ul {
 }
 
 .container-geral .li {
+    width: 100%;
     border: none;
     display: flex;
     flex-direction: row;
@@ -482,6 +485,14 @@ ul {
     font-weight: 700;
     border: none;
     padding: 15px;
+}
+
+.usuario{
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .modal {
