colocando o ícone do nexus no title das páginas novas, arrumando tela de curso e modais da instituição

--- a/aluno/projeto_tcc/style.css
+++ b/aluno/projeto_tcc/style.css
@@ -275,6 +275,11 @@ body {
     flex-direction: row-reverse;
 }
 
+.botoes a {
+
+    text-decoration: none;
+}
+
 .segundo_botao {
     font-size: 15px;
     width: 20%;
