--- a/aluno/relatorio_banca/disponivel/style.css
+++ b/aluno/relatorio_banca/disponivel/style.css
@@ -59,9 +59,13 @@
     transform: translate(-50%, -50%) 
 }
 
-.container{ position: relative ;
-    width: 100vw;
-    height: 100vh; 
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 85vh; 
  
 }
 
