posicionamento da foto de perfil do professor corrigido

--- a/professor/perfil/perfil.css
+++ b/professor/perfil/perfil.css
@@ -43,6 +43,8 @@ main {
     height: 150px;
     border-radius: 100px;
     margin-bottom: 10px;
+    object-fit: cover;
+    object-position: center center;
 }
 
 .container .profile-pic-div {
