--- a/aluno/projeto_tcc/style.css
+++ b/aluno/projeto_tcc/style.css
@@ -275,11 +275,6 @@ body {
     flex-direction: row-reverse;
 }
 
-.botoes a {
-
-    text-decoration: none;
-}
-
 .segundo_botao {
     font-size: 15px;
     width: 20%;
@@ -293,6 +288,20 @@ body {
     padding: 10px;
     margin-bottom: 2%;
 }
+
+/* #linkBtnVoltar {
+    font-size: 15px;
+    width: 20%;
+    background-color: rgba(240, 248, 255, 0);
+    color: black;
+    background-color: #e3e3e3;
+    margin-left: 1%;
+    border-radius: 10px;
+    font-weight: 300;
+    border: none;
+    padding: 10px;
+    margin-bottom: 2%;
+} */
 
 
 .primeiro_botao_anexo {
