--- a/instituicao/usuarios/style.css
+++ b/instituicao/usuarios/style.css
@@ -385,7 +385,9 @@ ul {
 }
 
 .container-geral .iconify {
-    border-radius: 50%;
+    border-radius: 100%;
+    object-fit: cover;
+    object-position: center center;
 }
 
 .container-geral h1 {
