--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -679,6 +679,8 @@ ul {
 
 .membro-container img {
     border-radius: 100%;
+    object-fit: cover;
+    object-position: center center;
 }
 
 .buttons {
