--- a/instituicao/cursos/turmas/grupo/style.css
+++ b/instituicao/cursos/turmas/grupo/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .grupo {
@@ -127,6 +128,25 @@ body {
     border-radius: 100%;
     object-fit: cover;
     object-position: center center;
+}
+
+.data-hora {
+    display: flex;
+    gap: 2%;
+    margin-top: 20px;
+}
+
+.data-hora input {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
+    width: 100%;
+    border: 1px solid #ced4da;
+}
+
+.data-apresentacao, .hora-apresentacao {
+    width: 49%;
 }
 
 .barra_progresso {
