--- a/professor/cursos/turmas/grupo/grupo.css
+++ b/professor/cursos/turmas/grupo/grupo.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90vh;
+    /* height: 90vh; */
     max-width: 85vw;
     list-style: none;
     margin-left: 145px;
@@ -19,6 +19,7 @@ body {
     height: 100vh;
     width: 100vw;
     font-family: "Poppins", sans-serif;
+    overflow-x: hidden;
 }
 
 .grupo h1 { 
@@ -155,6 +156,7 @@ body {
 .data-hora {
     display: flex;
     gap: 2%;
+    margin-top: 20px;
 }
 
 .data-apresentacao, .hora-apresentacao {
