--- a/aluno/projeto_tcc/style.css
+++ b/aluno/projeto_tcc/style.css
@@ -150,6 +150,25 @@ body {
     object-position: center center;
 }
 
+.data-hora input {
+    background-color: #e3e3e3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204a;
+    padding: 15px;
+    width: 100%;
+    border: 1px solid #ced4da;
+}
+
+.data-hora {
+    display: flex;
+    gap: 2%;
+    margin-top: 20px;
+}
+
+.data-apresentacao, .hora-apresentacao {
+    width: 49%;
+}
+
 .documentacao {
     margin-top: 2rem;
     display: flex;
