arrumando modal de usuário e de criação de grupo na visão do professor

--- a/professor/cursos/turmas/turmas.css
+++ b/professor/cursos/turmas/turmas.css
@@ -124,6 +124,10 @@ ul::-webkit-scrollbar-thumb {
     overflow: hidden;
 }
 
+.form-criar-grupo {
+    width: 100%;
+}
+
 #modal-excluir-grupo {
     width: 60%;
     height: 30vh;
