--- a/instituicao/perfil/infos_pagamento/style.css
+++ b/instituicao/perfil/infos_pagamento/style.css
@@ -26,6 +26,15 @@ body {
     height: 75vh;
 }
 
+.container h1 {
+    font-size: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #05204a;
+    font-weight: 700;
+}
+
 .container input {
     background-color: #e3e3e3;
     border-radius: 10px;
