--- a/aluno/relatorio_banca/indisponivel/style.css
+++ b/aluno/relatorio_banca/indisponivel/style.css
@@ -7,6 +7,12 @@
 body{
     width: 100vw;
     height: 100vh;
+   
+}
+
+main{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     font-family: "Poppins", sans-serif;
@@ -33,13 +39,13 @@ body{
     text-align: center;
 }
 
-h1{
+main h1{
     font-size: 80px;
     color: #E3E3E3;
     font-weight: 900;
 }
 
-h2{
+main h2{
     font-weight: 300;
     font-size: 50px;
 }
