--- a/aluno/tarefas/style.css
+++ b/aluno/tarefas/style.css
@@ -21,6 +21,7 @@
   box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
   -webkit-filter: blur(0.1px);
   filter: blur(0.1px);
+  
 }
 
 /* CIRCULO APARECE */
@@ -41,6 +42,7 @@
   transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
   font-size: 22px;
   user-select: none;
+  
 }
 
 /* X APARECE */
@@ -60,7 +62,7 @@ a, li {
   margin-left: 20%;
 }
 
-.pontos{
+.tresPontos{
   transform: rotate(90deg);
 }
 .nav > li {
@@ -85,14 +87,13 @@ a, li {
   right: 0;
   top: 3em;
   transition: all 0.25s ease-out;
-  transform: scale(0);
-  transform-origin: 100% 0;
-  z-index: 99999;
+  transform: scale(0);transform-origin: top left 2cm;
+  z-index: 9999;
 }
 
 .dropdown ul{
   padding: 20px;
-  display: none;
+  display: flex;
 }
 
 .dropdown img{
@@ -133,6 +134,7 @@ margin-left: 15%;
   transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
 }
 
+
 .follow {
   overflow: hidden;
   width: 42px;
@@ -165,6 +167,11 @@ margin-left: 15%;
     margin: 400px auto 0;
   }
 }
+
+
+
+
+
 
 .kebab2 {
   cursor: pointer;
@@ -232,6 +239,11 @@ a, li {
 .nav2 > li:hover {
   background: #ebebeb;
 }
+
+ol ol, ol ul, ul ol, ul ul {
+  margin-bottom: 0;
+  left: 20%;
+}
 .dropdown2 {
   position: absolute;
   display: flex;
@@ -246,13 +258,14 @@ a, li {
   top: 3em;
   transition: all 0.25s ease-out;
   transform: scale(0);
-  transform-origin: 100% 0;
+  transform-origin: top left 2cm;
   font-weight: 100;
   z-index: 99999;
 }
 
 .dropdown2 ul{
   padding: 20px;
+  left: 100%;
 }
 
 .dropdown2 img{
@@ -322,23 +335,33 @@ transform: scale(1);
 transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
 }
 
-.child-kebab2 {
+
+
+
+
+
+
+
+
+.childKebab {
   cursor: pointer;
   position: relative;
   display: inline-block;
   box-sizing: border-box;
   padding: 0 16px;
   top: 12px;
+  z-index: 99999;
 }
 
-.child-kebab2 figure {
+.childKebab figure {
   width: 6px;
   height: 6px;
   border-radius: 5px;
   background: #05204a;
   margin: 3px 0;
 }
-.child-middle2 {
+
+.childMiddle {
   transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
   transform: scale(1);
   position: relative;
@@ -346,13 +369,13 @@ transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
   -webkit-filter: blur(0.1px);
   filter: blur(0.1px);
 }
-.child-middle2.active {
+.childMiddle.active {
   transform: scale(4.5);
   transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
   box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
 }
 
-.child-cross2 {
+.childCross {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -362,9 +385,9 @@ transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
   color: white;
   transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
   font-size: 22px;
-  user-select: none;
+  user-select: none; z-index: 99999;
 }
-.child-cross2.active {
+.childCross.active {
   transform: translate(-50%, -50%) scale(1);
   transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
 }
@@ -376,79 +399,84 @@ a, li {
   text-decoration: none;
 }
 
-ol, ul {
-  padding-left: 0rem;
-}
-.child-pontos2{
+.childPontos{
   transform: rotate(90deg);
 }
 
-.child-nav2{
-  display: flex;
-}
 
-.child-nav2 > li {
+.childNav > li {
   display: inline-block;
   padding: 1em 18px;
   cursor: pointer;
+  z-index: 99999;
 }
 
-
-
-.child-nav2 > li:hover {
+.childNav > li:hover {
   background: #ebebeb;
 }
-.child-dropdown2 {
-  display: none;
+
+.testeteste{
+  z-index: 0;
+}
+.childDropdown {
   position: absolute;
   flex-direction: column;
-  width: 19rem;
-  height: 15rem;
+  width: 10rem;
+  height: 25rem;
   padding: 50%;
   justify-content: space-between;
-  border-radius: -20px;
-  background-color: #f4f4f4;
-  left: 200px;
-  top: -50px;
+  border-radius: 20px;
+  background-color: #eeeeee;
+  left: 150%;
+  top: -3.8rem;
   transition: all 0.25s ease-out;
   transform: scale(0);
-  transform-origin: 100% 0;
+  transform-origin: top left 2cm;
   font-weight: 100;
-  z-index: 9999;
+  z-index: 99999;
 }
 
-.child-dropdown2 ul{
+.childNav{
+  display: none;
+}
+
+.childDropdown ul{
   padding: 20px;
 }
 
-.child-dropdown2 img{
-  margin-right: 10%;
+.childDropdown img{
+  margin-right: 5%;
+}
+.childAbrir{
+margin-left: 20%;
 }
 
-.child-kebab2{
+.childKebab{
   border-radius: 100px;
 }
 
-.child-dropdown2 li {
+.childDropdown li {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 100%;
 }
 
-.child-dropdown2 li a {
+.childDropdown li a {
   width: 100%;
   padding: 1em 18px;
   display: inline-block;
   white-space: pre;
   box-sizing: border-box;
 }
-.child-dropdown2 li a:hover {
-  background: #ebebeb;
+.childDropdown li:hover {
+  background: #e3e3e3;
+  border-radius: 15px;
 }
-.child-dropdown2:hover ul {
+.childDropdown:hover ul {
   transform: scale(1);
 }
-.child-dropdown2.active {
+.childDropdown.active {
   transform: scale(1);
   transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
 }
@@ -477,10 +505,197 @@ ol, ul {
 }
 
 
-.dropdown2.active {
+.childDropdown.active {
 transform: scale(1);
 transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
 }
+
+
+
+.lastKebab {
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0 16px;
+  top: 12px;
+  z-index: 99999;
+  left: 200%;
+}
+
+.lastKebab figure {
+  width: 6px;
+  height: 6px;
+  border-radius: 5px;
+  background: #05204a;
+  margin: 3px 0;
+}
+
+.lastMiddle {
+  transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  transform: scale(1);
+  position: relative;
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+  -webkit-filter: blur(0.1px);
+  filter: blur(0.1px);
+}
+.lastMiddle.active {
+  transform: scale(4.5);
+  transition: all 0.25s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+  box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+}
+
+.lastCross {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  margin-top: -1px;
+  font-family: 'Nunito', sans-serif;
+  color: white;
+  transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+  font-size: 22px;
+  user-select: none; z-index: 99999;
+}
+.lastCross.active {
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+}
+h1, a, li {
+  font-family: Roboto, sans-serif;
+}
+a, li {
+  color: #6b6b6b;
+  text-decoration: none;
+}
+
+.lastPontos{
+  transform: rotate(90deg);
+}
+
+
+.lastNav > li {
+  display: inline-block;
+  padding: 1em 18px;
+  cursor: pointer;
+  z-index: 99999;
+}
+
+.lastNav > li:hover {
+  background: #ebebeb;
+}
+
+.testeteste{
+  z-index: 0;
+}
+
+.lastNav .lastKebab .lastDropdown li img{
+  margin-right: 25%;
+}
+
+.lastDropdown {
+  position: absolute;
+  flex-direction: column;
+  width: 10rem;
+  height: 30rm;
+  padding: 50%;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-color: #eeeeee;
+  right: -999;
+  top: -3.8rem;
+  transition: all 0.25s ease-out;
+  transform: scale(0);
+  transform-origin: top left 2cm;
+  font-weight: 100;
+  z-index: 99999;
+}
+
+.lastNav{
+  display: none;
+}
+
+.lastDropdown ul{
+  padding: 20px;
+}
+
+.lastDropdown img{
+  margin-right: 5%;
+}
+.lastAbrir{
+margin-left: 20%;
+}
+
+.lastKebab{
+  border-radius: 100px;
+}
+
+.lastDropdown li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+}
+
+.lastDropdown li a {
+  width: 100%;
+  padding: 1em 18px;
+  display: inline-block;
+  white-space: pre;
+  box-sizing: border-box;
+}
+.lastDropdown li:hover {
+  background: #e3e3e3;
+  border-radius: 15px;
+}
+.lastDropdown:hover ul {
+  transform: scale(1);
+}
+.lastDropdown.active {
+  transform: scale(1);
+  transition: all 0.25s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+}
+.follow {
+  overflow: hidden;
+  width: 42px;
+  height: 42px;
+  border-radius: 50px;
+  background: #03A9F4;
+  display: block;
+  margin: 300px auto 0;
+  white-space: nowrap;
+  padding: 13px;
+  box-sizing: border-box;
+  color: white;
+  transition: all 0.2s ease;
+  font-family: Roboto, sans-serif;
+  text-decoration: none;
+  box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 800px) {
+  .follow2 {
+    margin: 400px auto 0;
+  }
+}
+
+
+.lastDropdown.active {
+transform: scale(1);
+transition: all 0.25s cubic-bezier(.5,1.8,.9,.8);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 * {
   margin: 0;
@@ -555,6 +770,7 @@ body {
   top: 50%;
   left: 50%;
   margin-right: -50%;
+  z-index: 999999;
   transform: translate(-50%, -50%);
 }
 
@@ -742,23 +958,32 @@ body {
 }
 
 .listagem-topicos::-webkit-scrollbar {
-    width: 12px;  
+  height: 10px;
+  
+  /* width of the entire scrollbar */
 }
-.subtopico::-webkit-scrollbar {
-    width: 12px;  
+
+.listagem-topicos::-webkit-scrollbar-thumb {
+  background-color: #05204a;
+  /* color of the scroll thumb */
+  border-radius: 10px;
+  /* roundness of the scroll thumb */
+  border: none;
+  /* creates padding around scroll thumb */
 }
+
 
 .topico{
   margin-top: 5rem;
   margin-right: 5rem;
   align-items: center;
-  height: 70vh;
+  max-height: 100vh;
   position: relative;
 }
 
 .subtopico{
   overflow-y: auto;
-  height: 60%;
+  height: 90%;
 }
 
 .add-topico{
@@ -768,7 +993,8 @@ body {
 .listagem-topicos{
     display: flex;
     flex-direction: row;
-    overflow-y: auto; max-width: 80%;
+    padding: 0 0 5% 0;
+    overflow-y: auto; max-width: 100%;
 }
 
 .card-tarefa{
@@ -981,8 +1207,6 @@ padding: 1%;
  align-items: center;
 }
 
-
-
 .container_word{
  
    display: flex;
@@ -1089,7 +1313,6 @@ padding: 1%;
   width: 20px;
   left: -20px;
 }
-
 
 .delete-user{
   position: relative;
