--- a/home/produto/style.css
+++ b/home/produto/style.css
@@ -1,3 +1,34 @@
+body{
+    font-family: "Poppins", sans-serif;
+}
+
 header{
     background-color: black;
+}
+
+.div1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.div1 h1{
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.div2{
+    display: flex;
+    flex-direction: row;
+}
+
+.div2 h1{
+    font-size: 70px;
+    font-weight: 700;
+}
+
+.footer{
+    display: flex;
+    flex-direction: row;
 }
