--- a/instituicao/perfil/infos_pagamento/editar/style.css
+++ b/instituicao/perfil/infos_pagamento/editar/style.css
@@ -36,6 +36,15 @@ body {
     background-position: center center;
 }
 
+.container h1 {
+    font-size: 67px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #05204a;
+    font-weight: 700;
+}
+
 .container input {
     background-color: #e3e3e3;
     border-radius: 10px;
