--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -103,8 +103,8 @@ button {
     right: 0;
     bottom: 0;
     left: 0;
-    width: 40%;
-    height: 35%;
+    width: 30%;
+    height: 30%;
     padding: 2%;
     background-color: rgb(255, 255, 255);
     display: none;
@@ -183,7 +183,7 @@ button {
 .erro {
     background-color: #e3e3e3;
     border-radius: 10px;
-    border: 4px solid #a71e34;
+    border: 4px solid #a71e34 !important;
     padding: 15px;
 }
 
@@ -193,3 +193,40 @@ button {
     margin-top: 16px;
     color: #a71e34;
 }
+
+
+
+@media (max-width: 600px) {
+
+    .modal h1{
+        font-size: 40px;
+    }
+    .modal h2{
+        font-size: 25px;
+    }
+
+    .modal label{
+        font-size: 20px;
+    }
+    .usuarioEspecifico img{
+        width: 90px;
+    }
+
+    .avaliadores{
+        width: 100vw;
+    }
+
+    .imgs{
+        display: flex;
+        align-items: center;
+        text-align: center;
+        margin-top: 2%; 
+        width: 90%;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
+    .modal {
+        width: 80%;
+        height: 80%;
+    }
+ }
