--- a/professor/perfil/perfil.css
+++ b/professor/perfil/perfil.css
@@ -52,6 +52,12 @@ main {
     justify-content: center;
 }
 
+#fotoPerfil {
+    background-position: center;
+    background-size: cover;
+}
+
+
 .container h1 {
     font-size: 70px;
     display: flex;
