--- a/aluno/relatorio_banca/indisponivel/style.css
+++ b/aluno/relatorio_banca/indisponivel/style.css
@@ -13,6 +13,7 @@ body{
 main{
     width: 100%;
     height: 100%;
+    margin-left: 1%;
     display: flex;
     flex-direction: column;
     font-family: "Poppins", sans-serif;
