--- a/home/produto/style.css
+++ b/home/produto/style.css
@@ -6,21 +6,47 @@ header{
     background-color: black;
 }
 
+main{
+    padding: 0 3% 3% 3%;
+    
+}
+
 .div1{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    color: #272727;
+    background-color: #ECF0F5;
+    
 }
 
 .div1 h1{
-    font-size: 70px;
+    font-size: 87px;
     font-weight: 700;
+}
+.div1 img{
+    width: 40rem;
+ }
+
+.textDiv1{
+    width: 50%;
+}
+.div1 h2{
+    font-size: 50px;
+    font-weight: 100;
 }
 
 .div2{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    color: #272727;
+}
+
+.div2 img{
+   width: 30rem;
 }
 
 .div2 h1{
@@ -28,7 +54,36 @@ header{
     font-weight: 700;
 }
 
+.textDiv2{
+    width: 50%;
+}
+
 .footer{
     display: flex;
     flex-direction: row;
+    background-color: #044177;
+    color: white;
+    text-align: center;
+    justify-content: space-between;
+    padding: 3%;
+}
+
+.footer img{
+    width: 100px;
+    margin-bottom: 5%;
+}
+
+.footer h1{
+    font-size: 30px;
+}
+.missao{
+    width: 30%;
+}
+
+.visao{
+    width: 30%;
+}
+
+.valores{
+    width: 30%;
 }
